MBD - initial draft

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,15 +78,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "loading data...\nfiltering items...\nfiltering users...\nremapping user IDs...\nremapping item IDs...\nsplitting data by ratio...\nsaving data to disk...\n2020-09-07 09:39:03.332: \ncolumns = UIRT\nfilename = dataset/ml-100k.rating\nsep = \t\nitem_min = 5\nuser_min = 5\nremap_user_id = True\nremap_item_id = True\nsplit_by = ratio\ntrain = 0.7\nvalid = 0.0\ntest = 0.3\nby_time = False\n2020-09-07 09:39:03.332: Data statistic:\n2020-09-07 09:39:03.333: The number of users: 943\n2020-09-07 09:39:03.333: The number of items: 1349\n2020-09-07 09:39:03.334: The number of ratings: 99287\n2020-09-07 09:39:03.334: Average actions of users: 105.29\n2020-09-07 09:39:03.335: Average actions of items: 73.60\n2020-09-07 09:39:03.336: The sparsity of the dataset: 92.195075%\n"
+     "output_type": "stream",
+     "text": [
+      "loading data...\n",
+      "filtering items...\n",
+      "filtering users...\n",
+      "remapping user IDs...\n",
+      "remapping item IDs...\n",
+      "splitting data by ratio...\n",
+      "saving data to disk...\n",
+      "2020-10-24 08:46:53.674: \n",
+      "columns = UIRT\n",
+      "filename = dataset/ml-100k.rating\n",
+      "sep = \t\n",
+      "item_min = 5\n",
+      "user_min = 5\n",
+      "remap_user_id = True\n",
+      "remap_item_id = True\n",
+      "split_by = ratio\n",
+      "train = 0.7\n",
+      "valid = 0.0\n",
+      "test = 0.3\n",
+      "by_time = False\n",
+      "2020-10-24 08:46:53.674: \n",
+      "columns = UIRT\n",
+      "filename = dataset/ml-100k.rating\n",
+      "sep = \t\n",
+      "item_min = 5\n",
+      "user_min = 5\n",
+      "remap_user_id = True\n",
+      "remap_item_id = True\n",
+      "split_by = ratio\n",
+      "train = 0.7\n",
+      "valid = 0.0\n",
+      "test = 0.3\n",
+      "by_time = False\n",
+      "2020-10-24 08:46:53.677: Data statistic:\n",
+      "2020-10-24 08:46:53.677: Data statistic:\n",
+      "2020-10-24 08:46:53.680: The number of users: 943\n",
+      "2020-10-24 08:46:53.680: The number of users: 943\n",
+      "2020-10-24 08:46:53.682: The number of items: 1349\n",
+      "2020-10-24 08:46:53.682: The number of items: 1349\n",
+      "2020-10-24 08:46:53.685: The number of ratings: 99287\n",
+      "2020-10-24 08:46:53.685: The number of ratings: 99287\n",
+      "2020-10-24 08:46:53.689: Average actions of users: 105.29\n",
+      "2020-10-24 08:46:53.689: Average actions of users: 105.29\n",
+      "2020-10-24 08:46:53.693: Average actions of items: 73.60\n",
+      "2020-10-24 08:46:53.693: Average actions of items: 73.60\n",
+      "2020-10-24 08:46:53.696: The sparsity of the dataset: 92.195075%\n",
+      "2020-10-24 08:46:53.696: The sparsity of the dataset: 92.195075%\n"
+     ]
     }
    ],
    "source": [
@@ -120,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +200,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Dataset statistics:\nName: ml-100k_ratio_u5_i5\nThe number of users: 943\nThe number of items: 1349\nThe number of ratings: 99287\nAverage actions of users: 105.29\nAverage actions of items: 73.60\nThe sparsity of the dataset: 92.195075%\n\nThe number of training: 69918\nThe number of validation: 0\nThe number of testing: 29369\n"
+     "output_type": "stream",
+     "text": [
+      "Dataset statistics:\n",
+      "Name: ml-100k_ratio_u5_i5\n",
+      "The number of users: 943\n",
+      "The number of items: 1349\n",
+      "The number of ratings: 99287\n",
+      "Average actions of users: 105.29\n",
+      "Average actions of items: 73.60\n",
+      "The sparsity of the dataset: 92.195075%\n",
+      "\n",
+      "The number of training: 69918\n",
+      "The number of validation: 0\n",
+      "The number of testing: 29369\n"
+     ]
     }
    ],
    "source": [
@@ -181,15 +242,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "2020-09-07 09:39:03.462: Dataset statistics:\nName: ml-100k_ratio_u5_i5\nThe number of users: 943\nThe number of items: 1349\nThe number of ratings: 99287\nAverage actions of users: 105.29\nAverage actions of items: 73.60\nThe sparsity of the dataset: 92.195075%\n\nThe number of training: 69918\nThe number of validation: 0\nThe number of testing: 29369\n2020-09-07 09:39:03.463: NeuRec:[NeuRec]:\nrecommender=MF\nplatform=pytorch\ndata_dir=dataset/ml-100k_ratio_u5_i5\nfile_column=UIRT\nsep='\\t'\ngpu_id=0\ngpu_mem=0.99\nmetric=[\"Recall\", \"NDCG\"]\ntop_k=[10,20]\ntest_thread=4\ntest_batch_size=64\nseed=2020\n\nMF:[hyperparameters]:\nlr=0.001\nreg=0.001\nembedding_size=64\nbatch_size=1024\nepochs=500\nis_pairwise=True\nloss_func=bpr\nparam_init=normal\n"
+     "output_type": "stream",
+     "text": [
+      "2020-10-24 08:46:53.819: Dataset statistics:\n",
+      "Name: ml-100k_ratio_u5_i5\n",
+      "The number of users: 943\n",
+      "The number of items: 1349\n",
+      "The number of ratings: 99287\n",
+      "Average actions of users: 105.29\n",
+      "Average actions of items: 73.60\n",
+      "The sparsity of the dataset: 92.195075%\n",
+      "\n",
+      "The number of training: 69918\n",
+      "The number of validation: 0\n",
+      "The number of testing: 29369\n",
+      "2020-10-24 08:46:53.821: NeuRec:[NeuRec]:\n",
+      "recommender=MF\n",
+      "platform=tensorflow\n",
+      "data_dir=dataset/ml-100k_ratio_u5_i5\n",
+      "file_column=UIRT\n",
+      "sep='\\t'\n",
+      "gpu_id=0\n",
+      "gpu_mem=0.99\n",
+      "metric=[\"Precision\", \"Recall\", \"MAP\", \"NDCG\", \"MRR\"]\n",
+      "top_k=[10,20]\n",
+      "test_thread=4\n",
+      "test_batch_size=64\n",
+      "seed=2020\n",
+      "\n",
+      "MF:[hyperparameters]:\n",
+      "lr=0.001\n",
+      "reg=0.001\n",
+      "embedding_size=64\n",
+      "batch_size=1024\n",
+      "epochs=5\n",
+      "is_pairwise=True\n",
+      "loss_func=bpr\n",
+      "param_init=normal\n"
+     ]
     }
    ],
    "source": [
@@ -222,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,9 +364,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-30d731bb9a3c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# define model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpytorch\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0minner_product\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpytorch\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_initializer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "# define model\n",
     "import torch\n",
@@ -315,17 +424,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "2020-09-07 09:39:05.761: metrics:\tRecall@10   \tRecall@20   \tNDCG@10     \tNDCG@20     \n2020-09-07 09:39:06.258: epoch 0:\t0.10770490  \t0.16465843  \t0.28552932  \t0.27026427  \n2020-09-07 09:39:06.613: epoch 1:\t0.13054730  \t0.18908924  \t0.35471135  \t0.32684618  \n2020-09-07 09:39:06.955: epoch 2:\t0.13412264  \t0.19887631  \t0.36349073  \t0.33815101  \n2020-09-07 09:39:07.302: epoch 3:\t0.14865749  \t0.22065073  \t0.37910634  \t0.35600662  \n2020-09-07 09:39:07.662: epoch 4:\t0.15834199  \t0.23722199  \t0.39283869  \t0.37303281  \n2020-09-07 09:39:07.999: epoch 5:\t0.16417235  \t0.25143656  \t0.39951581  \t0.38516325  \n2020-09-07 09:39:08.358: epoch 6:\t0.16835485  \t0.25849476  \t0.40642720  \t0.39319900  \n2020-09-07 09:39:08.697: epoch 7:\t0.16959603  \t0.26213855  \t0.40809959  \t0.39609608  \n2020-09-07 09:39:09.037: epoch 8:\t0.16974196  \t0.26473686  \t0.40607208  \t0.39706051  \n2020-09-07 09:39:09.402: epoch 9:\t0.17185368  \t0.26898533  \t0.41091350  \t0.40162718  \ndone\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training\n",
     "from util.pytorch import pairwise_loss\n",
@@ -373,18 +476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
-    "tags": [],
-    "collapsed": false
+    "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "WARNING:tensorflow:From /mnt/Study/NeuRec&TFRec/NeuRec/util/tensorflow/func.py:18: The name tf.initializers.he_normal is deprecated. Please use tf.compat.v1.initializers.he_normal instead.\n\nWARNING:tensorflow:From /mnt/Study/NeuRec&TFRec/NeuRec/util/tensorflow/func.py:19: The name tf.initializers.he_uniform is deprecated. Please use tf.compat.v1.initializers.he_uniform instead.\n\nWARNING:tensorflow:From /home/sun/software/anaconda3/envs/neurec3/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1288: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\nInstructions for updating:\nCall initializer instance with the dtype argument instead of passing it to the constructor\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define model\n",
     "import os\n",
@@ -455,18 +551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "tags": [],
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "WARNING:tensorflow:From /mnt/Study/NeuRec&TFRec/NeuRec/util/tensorflow/loss.py:60: The name tf.log_sigmoid is deprecated. Please use tf.math.log_sigmoid instead.\n\nWARNING:tensorflow:From /mnt/Study/NeuRec&TFRec/NeuRec/util/tensorflow/func.py:46: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n\nWARNING:tensorflow:From /mnt/Study/NeuRec&TFRec/NeuRec/util/tensorflow/func.py:50: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n\nWARNING:tensorflow:From /mnt/Study/NeuRec&TFRec/NeuRec/util/tensorflow/func.py:51: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n\n2020-09-07 09:39:10.752: metrics:\tRecall@10   \tRecall@20   \tNDCG@10     \tNDCG@20     \n2020-09-07 09:39:11.058: epoch 0:\t0.10575286  \t0.16387418  \t0.28224397  \t0.27025080  \n2020-09-07 09:39:11.259: epoch 1:\t0.12308525  \t0.17858945  \t0.33833674  \t0.31253392  \n2020-09-07 09:39:11.469: epoch 2:\t0.13165003  \t0.19553524  \t0.35196504  \t0.32980362  \n2020-09-07 09:39:11.710: epoch 3:\t0.14024210  \t0.21059081  \t0.36248893  \t0.34322363  \n2020-09-07 09:39:11.911: epoch 4:\t0.15171170  \t0.22807011  \t0.37258989  \t0.35727158  \n2020-09-07 09:39:12.114: epoch 5:\t0.15554456  \t0.24153122  \t0.38260874  \t0.37020749  \n2020-09-07 09:39:12.314: epoch 6:\t0.16107126  \t0.25334293  \t0.39489868  \t0.38405839  \n2020-09-07 09:39:12.517: epoch 7:\t0.16573106  \t0.25769505  \t0.40002126  \t0.39035550  \n2020-09-07 09:39:12.718: epoch 8:\t0.16906622  \t0.26550996  \t0.40546519  \t0.39666191  \n2020-09-07 09:39:12.924: epoch 9:\t0.17028412  \t0.26793548  \t0.40592945  \t0.39957330  \ndone\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training\n",
     "num_users, num_items = dataset.num_users, dataset.num_items\n",
@@ -490,6 +579,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -500,12 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python361064bitneurec3condadc95a1fcfe8042408bc60cd247b20baa",
-   "display_name": "Python 3.6.10 64-bit ('neurec3': conda)"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
