--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -94,7 +94,7 @@
       "remapping item IDs...\n",
       "splitting data by ratio...\n",
       "saving data to disk...\n",
-      "2020-10-24 08:46:53.674: \n",
+      "2020-11-01 07:33:47.051: \n",
       "columns = UIRT\n",
       "filename = dataset/ml-100k.rating\n",
       "sep = \t\n",
@@ -107,33 +107,13 @@
       "valid = 0.0\n",
       "test = 0.3\n",
       "by_time = False\n",
-      "2020-10-24 08:46:53.674: \n",
-      "columns = UIRT\n",
-      "filename = dataset/ml-100k.rating\n",
-      "sep = \t\n",
-      "item_min = 5\n",
-      "user_min = 5\n",
-      "remap_user_id = True\n",
-      "remap_item_id = True\n",
-      "split_by = ratio\n",
-      "train = 0.7\n",
-      "valid = 0.0\n",
-      "test = 0.3\n",
-      "by_time = False\n",
-      "2020-10-24 08:46:53.677: Data statistic:\n",
-      "2020-10-24 08:46:53.677: Data statistic:\n",
-      "2020-10-24 08:46:53.680: The number of users: 943\n",
-      "2020-10-24 08:46:53.680: The number of users: 943\n",
-      "2020-10-24 08:46:53.682: The number of items: 1349\n",
-      "2020-10-24 08:46:53.682: The number of items: 1349\n",
-      "2020-10-24 08:46:53.685: The number of ratings: 99287\n",
-      "2020-10-24 08:46:53.685: The number of ratings: 99287\n",
-      "2020-10-24 08:46:53.689: Average actions of users: 105.29\n",
-      "2020-10-24 08:46:53.689: Average actions of users: 105.29\n",
-      "2020-10-24 08:46:53.693: Average actions of items: 73.60\n",
-      "2020-10-24 08:46:53.693: Average actions of items: 73.60\n",
-      "2020-10-24 08:46:53.696: The sparsity of the dataset: 92.195075%\n",
-      "2020-10-24 08:46:53.696: The sparsity of the dataset: 92.195075%\n"
+      "2020-11-01 07:33:47.053: Data statistic:\n",
+      "2020-11-01 07:33:47.054: The number of users: 943\n",
+      "2020-11-01 07:33:47.056: The number of items: 1349\n",
+      "2020-11-01 07:33:47.058: The number of ratings: 99287\n",
+      "2020-11-01 07:33:47.060: Average actions of users: 105.29\n",
+      "2020-11-01 07:33:47.063: Average actions of items: 73.60\n",
+      "2020-11-01 07:33:47.065: The sparsity of the dataset: 92.195075%\n"
      ]
     }
    ],
@@ -168,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -222,6 +202,14 @@
       "The number of validation: 0\n",
       "The number of testing: 29369\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Projects\\NeuRec\\data\\dataset.py:264: UserWarning: dataset\\ml-100k_ratio_u5_i5\\ml-100k_ratio_u5_i5.valid does not exist.\n",
+      "  warnings.warn(\"%s does not exist.\" % valid_file)\n"
+     ]
     }
    ],
    "source": [
@@ -242,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -251,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-10-24 08:46:53.819: Dataset statistics:\n",
+      "2020-11-01 07:33:47.358: Dataset statistics:\n",
       "Name: ml-100k_ratio_u5_i5\n",
       "The number of users: 943\n",
       "The number of items: 1349\n",
@@ -263,10 +251,10 @@
       "The number of training: 69918\n",
       "The number of validation: 0\n",
       "The number of testing: 29369\n",
-      "2020-10-24 08:46:53.821: NeuRec:[NeuRec]:\n",
+      "2020-11-01 07:33:47.363: NeuRec:[NeuRec]:\n",
       "recommender=MF\n",
       "platform=tensorflow\n",
-      "data_dir=dataset/ml-100k_ratio_u5_i5\n",
+      "data_dir='dataset\\ml-100k_ratio_u5_i5'\n",
       "file_column=UIRT\n",
       "sep='\\t'\n",
       "gpu_id=0\n",
@@ -319,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,21 +352,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-30d731bb9a3c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# define model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpytorch\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0minner_product\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpytorch\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_initializer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define model\n",
     "import torch\n",
@@ -424,11 +400,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-11-01 07:33:48.520: metrics:\tPrecision@10\tPrecision@20\tRecall@10   \tRecall@20   \tMAP@10      \tMAP@20      \tNDCG@10     \tNDCG@20     \tMRR@10      \tMRR@20      \n",
+      "2020-11-01 07:33:51.900: epoch 0:\t[0.2706257  0.22693552 0.10653991 0.16577937 0.17681025 0.14494169\n",
+      " 0.29247102 0.27834007 0.5023895  0.5068638 ]\n",
+      "2020-11-01 07:33:55.401: epoch 1:\t[0.30657503 0.24342546 0.12755449 0.18569347 0.22068861 0.17701194\n",
+      " 0.34513623 0.319185   0.59120387 0.59507126]\n",
+      "2020-11-01 07:33:59.391: epoch 2:\t[0.30848414 0.25206807 0.13225918 0.19953209 0.2256656  0.18437687\n",
+      " 0.35220337 0.3322045  0.6052692  0.6096919 ]\n",
+      "2020-11-01 07:34:02.992: epoch 3:\t[0.32322413 0.26309663 0.14436176 0.21571401 0.23419845 0.19284433\n",
+      " 0.36425504 0.34561378 0.60613894 0.60995245]\n",
+      "2020-11-01 07:34:06.611: epoch 4:\t[0.33128342 0.2730648  0.15050459 0.2312524  0.24044165 0.20215398\n",
+      " 0.37315232 0.35920298 0.61743766 0.6215096 ]\n",
+      "2020-11-01 07:34:10.331: epoch 5:\t[0.34443277 0.2829269  0.15992226 0.24208647 0.25061163 0.21159233\n",
+      " 0.38434368 0.37016654 0.6158559  0.61999375]\n",
+      "2020-11-01 07:34:13.597: epoch 6:\t[0.34825033 0.29035002 0.16131763 0.25100064 0.25515798 0.21782975\n",
+      " 0.38888356 0.3784525  0.6224032  0.62635857]\n",
+      "2020-11-01 07:34:16.584: epoch 7:\t[0.35397694 0.29443267 0.16330291 0.2561458  0.26211476 0.2236761\n",
+      " 0.39653033 0.38558984 0.6352665  0.6397024 ]\n",
+      "2020-11-01 07:34:19.683: epoch 8:\t[0.3604456  0.29989403 0.16535239 0.26045123 0.2669568  0.22880672\n",
+      " 0.4019238  0.39118797 0.6403136  0.6440116 ]\n",
+      "2020-11-01 07:34:22.990: epoch 9:\t[0.3673386  0.30307525 0.16821046 0.26313746 0.27205193 0.23271835\n",
+      " 0.40816692 0.39540705 0.644998   0.64823335]\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "# training\n",
     "from util.pytorch import pairwise_loss\n",
@@ -476,11 +481,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Projects\\NeuRec\\util\\tensorflow\\func.py:18: The name tf.initializers.he_normal is deprecated. Please use tf.compat.v1.initializers.he_normal instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Projects\\NeuRec\\util\\tensorflow\\func.py:19: The name tf.initializers.he_uniform is deprecated. Please use tf.compat.v1.initializers.he_uniform instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:1288: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\pavel\\.conda\\envs\\NeuRec3\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "# define model\n",
     "import os\n",
@@ -551,11 +606,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Projects\\NeuRec\\util\\tensorflow\\loss.py:60: The name tf.log_sigmoid is deprecated. Please use tf.math.log_sigmoid instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Projects\\NeuRec\\util\\tensorflow\\func.py:46: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Projects\\NeuRec\\util\\tensorflow\\func.py:50: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Projects\\NeuRec\\util\\tensorflow\\func.py:51: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n",
+      "\n",
+      "2020-11-01 07:34:26.414: metrics:\tPrecision@10\tPrecision@20\tRecall@10   \tRecall@20   \tMAP@10      \tMAP@20      \tNDCG@10     \tNDCG@20     \tMRR@10      \tMRR@20      \n",
+      "2020-11-01 07:34:27.148: epoch 0:\t[0.27158022 0.22428443 0.10478995 0.16944468 0.17851605 0.14222392\n",
+      " 0.29471102 0.27841341 0.50808597 0.5150114 ]\n",
+      "2020-11-01 07:34:27.703: epoch 1:\t[0.30307555 0.24199395 0.12419485 0.18160151 0.2174702  0.1712266\n",
+      " 0.34009495 0.3125133  0.58186805 0.5860953 ]\n",
+      "2020-11-01 07:34:28.243: epoch 2:\t[0.31134722 0.25238633 0.13338241 0.1981002  0.22224434 0.18077408\n",
+      " 0.3500989  0.32830843 0.596429   0.6000306 ]\n",
+      "2020-11-01 07:34:28.780: epoch 3:\t[0.32640558 0.26850498 0.14463207 0.2192234  0.23716715 0.19587216\n",
+      " 0.36720735 0.34935266 0.6100146  0.61332285]\n",
+      "2020-11-01 07:34:29.407: epoch 4:\t[0.33647993 0.2791623  0.15279293 0.23522587 0.24489653 0.20680861\n",
+      " 0.37916517 0.36510718 0.62650234 0.6301818 ]\n",
+      "2020-11-01 07:34:29.928: epoch 5:\t[0.34899297 0.2864794  0.16192959 0.24572062 0.25415975 0.21437074\n",
+      " 0.3892838  0.37427926 0.6245045  0.6281069 ]\n",
+      "2020-11-01 07:34:30.464: epoch 6:\t[0.35641593 0.29528093 0.16515829 0.25688314 0.26350993 0.22428836\n",
+      " 0.3994235  0.38716725 0.64130366 0.64501643]\n",
+      "2020-11-01 07:34:30.996: epoch 7:\t[0.3618242  0.3009543  0.16920805 0.2609713  0.2675417  0.23006038\n",
+      " 0.40348956 0.39209968 0.63737935 0.6403708 ]\n",
+      "2020-11-01 07:34:31.533: epoch 8:\t[0.3642632  0.3022268  0.1699168  0.26476187 0.2707083  0.23145576\n",
+      " 0.40645713 0.39484245 0.6413408  0.645155  ]\n",
+      "2020-11-01 07:34:32.080: epoch 9:\t[0.36415708 0.30625665 0.16939667 0.26747957 0.270254   0.23391482\n",
+      " 0.40653843 0.39804664 0.6450186  0.64883   ]\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "# training\n",
     "num_users, num_items = dataset.num_users, dataset.num_items\n",
@@ -594,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
